# Ginkgo

./: CMakeLists.txt  LICENSE  README.md
anatomist-plugin/: CMakeLists.txt
anatomist-plugin/share/ui/GkgDwiGlobalTractographyViewer/: DwiGlobalTractographyViewer.ui
anatomist-plugin/share/ui/anatomist-plugin/: InteractiveBundleMapRenderingOptions.ui  MedusaGeometryRenderingOptions.ui  OdfFieldRenderingOptions.ui  PointCloudFieldRenderingOptions.ui  PointCloudRenderingOptions.ui
anatomist-plugin/src/: CMakeLists.txt
anatomist-plugin/src/command/: CMakeLists.txt
anatomist-plugin/src/command/GkgDwiGlobalTractographyViewer/: AGlobalTractographyObject.cxx  AGlobalTractographyObject.h  AnatomistViewer.cxx  AnatomistViewer.h  BoundingBoxCallback.cxx  BoundingBoxCallback.h  CMakeLists.txt  GlobalTractographyCallbackIds.h  GlobalTractographyEvent.cxx  GlobalTractographyEvent.h  GlobalTractographyService.cxx  GlobalTractographyService.h  GlobalTractographyServiceThread.cxx  GlobalTractographyServiceThread.h  GlobalTractographyViewer.cxx  GlobalTractographyViewer.h  InitialSpinGlassConfigurationCallback.cxx  ResetCallback.cxx  ResetCallback.h  SpinGlassConnectionCreationCallback.cxx  SpinGlassConnectionDeletionCallback.cxx  SpinGlassCreationCallback.cxx  SpinGlassCreationCallback.h  SpinGlassDeletionCallback.cxx  SpinGlassMoveCallback.cxx  (+3 more)
anatomist-plugin/src/test/: CMakeLists.txt
communication/: CMakeLists.txt
communication/python/: CMakeLists.txt  gkg_wrapper.cxx  setup.py.in
communication/share/: CMakeLists.txt  functorrc.in  pluginrc.in
communication/src/: CMakeLists.txt
communication/src/command/: CMakeLists.txt
communication/src/plugin/: CMakeLists.txt
communication/src/test/: CMakeLists.txt
communication/test/GkgTestPythonModule/: GkgTestPythonModule  GkgTestPythonModule.py
core/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/test/: CMakeLists.txt
dmri/: CMakeLists.txt
dmri/scripts/: CMakeLists.txt  example-of-connectivity-matrix.mat
dmri/scripts/DisplayConnectivityMatrix/: CMakeLists.txt  GkgDisplayConnectivityMatrix  GkgDisplayConnectivityMatrix.py
dmri/scripts/GetConnectivityMatrixValue/: CMakeLists.txt  GkgGetConnectivityMatrixValue  GkgGetConnectivityMatrixValue.py
dmri/src/plugin/: CMakeLists.txt
dmri/src/test/: CMakeLists.txt
global-tractography/src/plugin/: CMakeLists.txt
graphics/src/Video/: CMakeLists.txt
graphics/src/X11/: CMakeLists.txt
packaging/: CMakeLists.txt  COPYRIGHT.in  HOWTO  VERSION.in  depencies-Ubuntu16.04LTS.txt  getMac.cxx  pack-ants.sh  pack-kokkos.sh  pack-wt.sh
processing/: CMakeLists.txt
processing/scripts/: CMakeLists.txt
processing/scripts/AntsBiasFieldCorrection/: CMakeLists.txt  GkgAntsBiasFieldCorrection  GkgAntsBiasFieldCorrection.py
processing/scripts/AntsRegistration3d/: CMakeLists.txt  GkgAntsRegistration3d  GkgAntsRegistration3d.py
processing/scripts/TrmToAntsAffineTransformation3d/: CMakeLists.txt  GkgTrmToAntsAffineTransformation3d  GkgTrmToAntsAffineTransformation3d.py
processing/share/: gkgrc
processing/src/plugin/: CMakeLists.txt
processing/src/test/: CMakeLists.txt
pygkg/: CMakeLists.txt
pygkg/python/: CMakeLists.txt
pygkg/python/pygkg/: AbortableThread.py  AdvancedParameter.py  AdvancedParameterWidget.py  Algorithm.py  AlgorithmGUI.py  Application.py  ColorMapDialog.py  ContainerInformationHandler.py  DirectoryOrFileListDialog.py  Frame.py  MainThreadActionManager.py  MultiSubjectSelectionDialog.py  MultiSubjectSettingsDialog.py  MultipleTabItem.py  MultipleTabWindow.py  OptionParser.py  Parameter.py  PathHandler.py  PdfViewerWidget.py  ProcessListParameter.py  ProcessListWidget.py  ProcessListWidgetItem.py  ProcessProgressBar.py  RegistrationParameter.py  ResourceManager.py  Rotation3dFunctions.py  Singleton.py  SnapshotTool.py  SpecySelectionDialog.py  StyleSheet.py  SubjectNameDialog.py  Task.py  ToolBox.py  ToolBoxPageSettingDialog.py  Viewer.py  ViewerCallbackManager.py  VolumeInformationHandler.py  WidgetWithOverlay.py  XMLResourceManager.py
pygkg/python/templates/: TemplateAlgorithm.py  TemplateAlgorithmGUI.py  TemplateTask.py  TemplateViewer.py
pygkg/python/tutorial/: TutorialPages.py  TutorialToolBox.py
pygkg/scripts/: CMakeLists.txt
pygkg/scripts/AffineTransform3dParameters/: CMakeLists.txt  GkgAffineTransform3dParameters  GkgAffineTransform3dParameters.py
pygkg/scripts/RigidTransform3dParameters/: CMakeLists.txt  GkgRigidTransform3dParameters  GkgRigidTransform3dParameters.py
pygkg/scripts/SnapIt/: CMakeLists.txt  GkgSnapIt.py
pygkg/scripts/Tutorial/: Tutorial.py
python/: CMakeLists.txt
python/core/command/: Command.py  CommandFactory.py  Commands.py
python/core/patterns/: Singleton.py
python/processing/bias/: AntsBiasFieldCorrection.py
python/processing/registration/: AntsRegistration3d.py
python/simulation/: SWCDataReconstruction.py  readme.md  requirements.txt
python/simulation/test_data/: 02b_pyramidal1aACC.CNG.swc  02b_pyramidal1aFI.CNG.swc  03a_pyramidal9aFI.CNG.swc  03a_spindle2aFI.CNG.swc  03a_spindle6aFI.CNG.swc  03b_pyramidal2aACC.CNG.swc  03b_pyramidal3aACC.CNG.swc  03b_pyramidal3aFI.CNG.swc  03b_pyramidal4aFI.CNG.swc
sdk/: CMakeLists.txt
sdk/src/: CMakeLists.txt
sdk/src/GkgBiasCorrection3d/: BiasCorrection3dProcess.cxx  BiasCorrection3dProcess.h  CMakeLists.txt  main.cxx  script.sh
sdk/src/GkgMapR/: CMakeLists.txt  DataCostD.h  DiffeomorphicTransformations.h  MinimumSpanningTree.h  Regularization.h  main.cxx
sdk/src/GkgMapR1/: CMakeLists.txt  DataCostD.h  DiffeomorphicTransformations.h  MinimumSpanningTree.h  Regularization.h  SymmetricDiffeomorphism.h  main.cxx  script.sh  script2.sh
sdk/src/GkgMapR2/: CMakeLists.txt  MinimumSpanningTree.h  MinimumSpanningTree_i.h  main.cxx
sdk/src/GkgSDKBinarizer/: CMakeLists.txt  main.cxx
sdk/src/GkgSDKCudaThreshold/: CMakeLists.txt  CudaThresholding.cu  CudaThresholding.h  main.cxx
sdk/src/GkgWMBundleWebGLViewer/: CMakeLists.txt  example.bundles  example.bundlesdata  main.cxx  script_GkgWMBundleWebGLViewer.sh
sdk/src/webgl/: CMakeLists.txt  script_webgl.sh
(+1483 files in other folders)
