add_subdirectory( GkgTestAlgorithm01 )
add_subdirectory( GkgTestCommand01 )
add_subdirectory( GkgTestConfigurationInfo01 )
add_subdirectory( GkgTestDetachedThread01 )
add_subdirectory( GkgTestDirectory01 )
add_subdirectory( GkgTestFile01 )
add_subdirectory( GkgTestFileFinder01 )
add_subdirectory( GkgTestHistory01 )
add_subdirectory( GkgTestLog01 )
add_subdirectory( GkgTestMacAddress01 )
add_subdirectory( GkgTestMemoryInfo01 )
add_subdirectory( GkgTestMultithreading01 )
add_subdirectory( GkgTestPluginLoader01 )
